--- a/app/views/reviews/edit.html.erb
+++ b/app/views/reviews/edit.html.erb
@@ -11,11 +11,11 @@
   <h1>Edit Review #<%= @review.id %></h1>
 </div>
 
-<div class="row">
+<!-- <div class="row">
   <div class="col-md-12">
     <form action="/update_review/<%= @review.id %>" class="form-horizontal">
 
-      <!-- Label and input for book_id -->
+      <!-- Label and input for book_id ->
       <div class="form-group">
 
         <label for="book_id" class="col-sm-2 control-label">
@@ -30,7 +30,7 @@
       </div>
 
 
-      <!-- Label and input for user_id -->
+      <!-- Label and input for user_id ->
       <div class="form-group">
 
         <label for="user_id" class="col-sm-2 control-label">
@@ -45,7 +45,7 @@
       </div>
 
 
-      <!-- Label and input for summary -->
+      <!-- Label and input for summary ->
       <div class="form-group">
 
         <label for="summary" class="col-sm-2 control-label">
@@ -60,7 +60,7 @@
       </div>
 
 
-      <!-- Label and input for fullReview -->
+      <!-- Label and input for fullReview ->
       <div class="form-group">
 
         <label for="fullReview" class="col-sm-2 control-label">
@@ -75,7 +75,7 @@
       </div>
 
 
-      <!-- Label and input for startDate -->
+      <!-- Label and input for startDate ->
       <div class="form-group">
 
         <label for="startDate" class="col-sm-2 control-label">
@@ -90,7 +90,7 @@
       </div>
 
 
-      <!-- Label and input for endDate -->
+      <!-- Label and input for endDate ->
       <div class="form-group">
 
         <label for="endDate" class="col-sm-2 control-label">
@@ -105,7 +105,7 @@
       </div>
 
 
-      <!-- Label and input for enlightenmentRating -->
+      <!-- Label and input for enlightenmentRating ->
       <div class="form-group">
 
         <label for="enlightenmentRating" class="col-sm-2 control-label">
@@ -120,7 +120,7 @@
       </div>
 
 
-      <!-- Label and input for enjoymentRating -->
+      <!-- Label and input for enjoymentRating ->
       <div class="form-group">
 
         <label for="enjoymentRating" class="col-sm-2 control-label">
@@ -135,7 +135,7 @@
       </div>
 
 
-      <!-- Label and input for overallRating -->
+      <!-- Label and input for overallRating ->
       <div class="form-group">
 
         <label for="overallRating" class="col-sm-2 control-label">
@@ -157,7 +157,7 @@
       </div>
     </form>
   </div>
-</div>
+</div> -->
 
 <div class="row">
   <div class="col-md-offset-3 col-md-6">
@@ -176,7 +176,8 @@
             </label>
             <div class="col-sm-10">
 
-              <input type="text" id="book_id" name="book_id" placeholder="Book" class="form-control" value="<%= @review.book_id %>">
+              <!-- <input type="text" id="book_id" name="book_id" placeholder="Book" class="form-control" value="<%= @review.book_id %>"> -->
+              <%= select_tag(:book_id, options_from_collection_for_select(Book.all, :id, :title, @review.book_id), :class => "form-control") %>
 
             </div>
 
@@ -191,7 +192,8 @@
             </label>
             <div class="col-sm-10">
 
-              <input type="text" id="user_id" name="user_id" placeholder="User" class="form-control" value="<%= @review.user_id %>">
+              <!-- <input type="text" id="user_id" name="user_id" placeholder="User" class="form-control" value="<%= @review.user_id %>"> -->
+              <%= select_tag(:user_id, options_from_collection_for_select(User.all, :id, :username, @review.user_id), :class => "form-control") %>
 
             </div>
 
@@ -217,11 +219,11 @@
           <div class="form-group">
 
             <label for="fullReview" class="col-sm-2 control-label">
-              Fullreview
+              Full Review
             </label>
             <div class="col-sm-10">
 
-              <input type="text" id="fullReview" name="fullReview" placeholder="Fullreview" class="form-control" value="<%= @review.fullReview %>">
+              <input type="text" id="fullReview" name="fullReview" placeholder="Full Review" class="form-control" value="<%= @review.fullReview %>">
 
             </div>
 
@@ -232,11 +234,11 @@
           <div class="form-group">
 
             <label for="startDate" class="col-sm-2 control-label">
-              Startdate
+              Start Date
             </label>
             <div class="col-sm-10">
 
-              <input type="text" id="startDate" name="startDate" placeholder="Startdate" class="form-control" value="<%= @review.startDate %>">
+              <input type="date" id="startDate" name="startDate" placeholder="startDate" class="form-control" value="<%= @review.startDate %>">
 
             </div>
 
@@ -247,11 +249,11 @@
           <div class="form-group">
 
             <label for="endDate" class="col-sm-2 control-label">
-              Enddate
+              End Date
             </label>
             <div class="col-sm-10">
 
-              <input type="text" id="endDate" name="endDate" placeholder="Enddate" class="form-control" value="<%= @review.endDate %>">
+              <input type="date" id="endDate" name="endDate" placeholder="endDate" class="form-control" value="<%= @review.endDate %>">
 
             </div>
 
@@ -262,11 +264,13 @@
           <div class="form-group">
 
             <label for="enlightenmentRating" class="col-sm-2 control-label">
-              Enlightenmentrating
+              Enlightenment Rating
             </label>
             <div class="col-sm-10">
 
-              <input type="text" id="enlightenmentRating" name="enlightenmentRating" placeholder="Enlightenmentrating" class="form-control" value="<%= @review.enlightenmentRating %>">
+              <!-- <input type="text" id="enlightenmentRating" name="enlightenmentRating" placeholder="Enlightenmentrating" class="form-control" value="<%= @review.enlightenmentRating %>"> -->
+
+              <input id="enlightenmentRating" type="number" name="enlightenmentRating" class="rating" data-size="xs" value="<%= @review.enlightenmentRating %>" data-min="0" data-max="5" step="1" glyphicon="false" >
 
             </div>
 
@@ -277,11 +281,13 @@
           <div class="form-group">
 
             <label for="enjoymentRating" class="col-sm-2 control-label">
-              Enjoymentrating
+              Enjoyment Rating
             </label>
             <div class="col-sm-10">
 
-              <input type="text" id="enjoymentRating" name="enjoymentRating" placeholder="Enjoymentrating" class="form-control" value="<%= @review.enjoymentRating %>">
+              <!-- <input type="text" id="enjoymentRating" name="enjoymentRating" placeholder="Enjoymentrating" class="form-control" value="<%= @review.enjoymentRating %>"> -->
+
+              <input id="enjoymentRating" type="number" name="enjoymentRating" class="rating" data-size="xs" value="<%= @review.enjoymentRating %>" data-min="0" data-max="5" step="1" glyphicon="false" >
 
             </div>
 
@@ -292,11 +298,13 @@
           <div class="form-group">
 
             <label for="overallRating" class="col-sm-2 control-label">
-              Overallrating
+              Overall Rating
             </label>
             <div class="col-sm-10">
 
-              <input type="text" id="overallRating" name="overallRating" placeholder="Overallrating" class="form-control" value="<%= @review.overallRating %>">
+              <!-- <input type="text" id="overallRating" name="overallRating" placeholder="Overallrating" class="form-control" value="<%= @review.overallRating %>"> -->
+
+              <input id="overallRating" type="number" name="overallRating" class="rating" data-size="xs" value="<%= @review.overallRating %>" data-min="0" data-max="5" step="1" glyphicon="false" >
 
             </div>
 
