--- a/app/views/reviews/show.html.erb
+++ b/app/views/reviews/show.html.erb
@@ -16,27 +16,27 @@
   <dd><%= @review.summary %></dd>
 
 
-  <dt>Fullreview</dt>
+  <dt>Full Review</dt>
   <dd><%= @review.fullReview %></dd>
 
 
-  <dt>Startdate</dt>
+  <dt>Start Date</dt>
   <dd><%= @review.startDate %></dd>
 
 
-  <dt>Enddate</dt>
+  <dt>End Date</dt>
   <dd><%= @review.endDate %></dd>
 
 
-  <dt>Enlightenmentrating</dt>
+  <dt>Enlightenment Rating</dt>
   <dd><%= @review.enlightenmentRating %></dd>
 
 
-  <dt>Enjoymentrating</dt>
+  <dt>Enjoyment Rating</dt>
   <dd><%= @review.enjoymentRating %></dd>
 
 
-  <dt>Overallrating</dt>
+  <dt>Overall Rating</dt>
   <dd><%= @review.overallRating %></dd>
 
 
