--- a/app/views/authors/new.html.erb
+++ b/app/views/authors/new.html.erb
@@ -11,11 +11,11 @@
   <h1>Add Author</h1>
 </div>
 
-<div class="row">
+<!-- <div class="row">
   <div class="col-md-12">
     <form action="/create_author" class="form-horizontal">
 
-      <!-- Label and input for firstName -->
+      <!-- Label and input for firstName ->
       <div class="form-group">
 
         <label for="firstName" class="col-sm-2 control-label">
@@ -30,7 +30,7 @@
       </div>
 
 
-      <!-- Label and input for lastName -->
+      <!-- Label and input for lastName ->
       <div class="form-group">
 
         <label for="lastName" class="col-sm-2 control-label">
@@ -45,7 +45,7 @@
       </div>
 
 
-      <!-- Label and input for shortBio -->
+      <!-- Label and input for shortBio ->
       <div class="form-group">
 
         <label for="shortBio" class="col-sm-2 control-label">
@@ -68,7 +68,7 @@
     </form>
   </div>
 </div>
-
+ -->
 <div class="row">
   <div class="col-md-offset-3 col-md-6">
     <div class="panel panel-default">
@@ -82,11 +82,11 @@
           <div class="form-group">
 
             <label for="firstName" class="col-sm-2 control-label">
-              Firstname
+              First Name
             </label>
             <div class="col-sm-10">
 
-              <input type="text" id="firstName" name="firstName" placeholder="Firstname" class="form-control" value="<%= @author.firstName %>">
+              <input type="text" id="firstName" name="firstName" placeholder="First Name" class="form-control" value="<%= @author.firstName %>">
 
             </div>
 
@@ -97,11 +97,11 @@
           <div class="form-group">
 
             <label for="lastName" class="col-sm-2 control-label">
-              Lastname
+              Last Name
             </label>
             <div class="col-sm-10">
 
-              <input type="text" id="lastName" name="lastName" placeholder="Lastname" class="form-control" value="<%= @author.lastName %>">
+              <input type="text" id="lastName" name="lastName" placeholder="Last Name" class="form-control" value="<%= @author.lastName %>">
 
             </div>
 
@@ -112,11 +112,11 @@
           <div class="form-group">
 
             <label for="shortBio" class="col-sm-2 control-label">
-              Shortbio
+              Short Bio
             </label>
             <div class="col-sm-10">
 
-              <input type="text" id="shortBio" name="shortBio" placeholder="Shortbio" class="form-control" value="<%= @author.shortBio %>">
+              <input type="text" id="shortBio" name="shortBio" placeholder="Short Bio" class="form-control" value="<%= @author.shortBio %>">
 
             </div>
 
