--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Goodreads2</title>
+  <title>Goodreads</title>
 
 
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootswatch/3.3.0/paper/bootstrap.min.css">
@@ -21,6 +21,8 @@
   <%= csrf_meta_tags %>
 
   <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+  <script src="http://code.jquery.com/jquery-latest.min.js"></script>
+
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -34,7 +36,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a href="/" class="navbar-brand">Goodreads2</a>
+      <a href="/" class="navbar-brand">Goodreads</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -42,19 +44,19 @@
       <ul class="nav navbar-nav">
 
 
-        <li><a href="/authors">Authors</a></li>
-
         <li><a href="/reviews">Reviews</a></li>
 
         <li><a href="/books">Books</a></li>
+
+        <li><a href="/authors">Authors</a></li>
 
         <li><a href="#">About</a></li>
 
       </ul>
 
       <ul class="nav navbar-nav navbar-right">
-        <% if 1 > 2 %>
-          <li><a href="/users/edit">Oscar the Grouch</a></li>
+        <% if current_user.present? %>
+          <li><a href="/users/edit">Account (<%= current_user.username %>)</a></li>
           <li><a href="/users/sign_out" data-method="delete">Sign out</a></li>
         <% else %>
           <li><a href="/users/sign_up">Sign up</a></li>
